# SquareLang

./: .clang-format  CMakeLists.txt  README.md
example/: example.square  stdlib.square
src/: ast.h  codegen.c  lexer.c  lexer.h  optimize.c  optimize.h  parser.c  parser.h  preprocessor.c  preprocessor.h  square.c
